REFACTORING:   use the factory in util instead of the base factory   to get access to the convenience methods. MODIFY:   when setting Prec for an optempPara, use BigInteger.